# 3D_Viever_C

./: Makefile  README.md  bash
3DWieve/: 3DWieve.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scene.cpp  scene.h
3DWieve/.qtc_clangd/: compile_commands.json
3DWieve/.qtc_clangd/.cache/clangd/index/: QColor.55B5D3DCDA9C5434.idx  (+241 more)
GIFCreation/: CMakeLists.txt
GIFCreation/gifImage/: qgifglobal.h  qgifimage.cpp  qgifimage.h  qgifimage_p.h
GIFCreation/gifLib/: dgif_lib.c  egif_lib.c  gif_err.c  gif_font.c  gif_hash.c  gif_hash.h  gif_lib.h  gif_lib_private.h  gifalloc.c  quantize.c
build-3DWieve-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: Makefile  moc_mainwindow.cpp  moc_predefs.h  ui_mainwindow.h
build-3DWieve-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
build-3DWieve-Desktop_x86_darwin_generic_mach_o_64bit-Profile/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
build-3DWieve-Desktop_x86_darwin_generic_mach_o_64bit-Profile/.qtc_clangd/: compile_commands.json
build-3DWieve-Desktop_x86_darwin_generic_mach_o_64bit-Profile/3DWieve.app.dSYM/Contents/: Info.plist
build-3DWieve-Desktop_x86_darwin_generic_mach_o_64bit-Release/: .qmake.stash  Makefile  moc_mainwindow.cpp  moc_predefs.h  ui_mainwindow.h
build-3DWieve-Desktop_x86_darwin_generic_mach_o_64bit-Release/.qtc_clangd/: compile_commands.json
build-3DWieve-Desktop_x86_darwin_generic_mach_o_64bit-Release/3DWieve.app/Contents/: Info.plist
other_back/: a.out  s21_viewer.c  s21_viewer.h
parsing/: a.out  s21_test.c  s21_viewer.c  s21_viewer.h  yasha.c
(+626 files in other folders)
